--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
         "flowbite": "^3.1.2",
         "framer-motion": "^12.4.7",
         "gsap": "^3.12.7",
+        "laravel-echo": "^2.3.0",
         "lodash": "^4.17.21",
         "lucide-vue-next": "^0.476.0",
+        "pusher-js": "^8.4.0",
         "recharts": "^2.15.1",
         "sweetalert2": "^11.17.2",
         "vue-chart-3": "^3.1.8",
